[package]
name = "transactions"
version = "0.1.0"
authors = ["Toy Transactions"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
rust_decimal = "1.17"

[dev-dependencies]
insta = "1.8.0"
